[package]
name = "gameshow"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
#rocket = { git = "https://github.com/rwf2/Rocket.git" , features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#bcrypt = "0.15.1"
jsonwebtoken = "9"
#http-auth-basic = "0.3.5"
time = "0.3"
#sha256 = "1.6.0"

[dependencies.uuid]
version = "1.21.0"
# Lets you generate random UUIDs
features = [
    "v4",
]